# jlab-mcp

./: .gitignore  CLAUDE.md  HOW_IT_WORKS.md  README.md  pyproject.toml
src/jlab_mcp/: __main__.py  config.py  image_utils.py  jupyter_client.py  jupyter_slurm.sh.template  local.py  notebook.py  server.py  slurm.py
tests/: test_image_utils.py  test_jupyter_client.py  test_local.py  test_notebook.py  test_slurm.py  test_tools.py
